<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connections.ConnectionsFragment">
    <TextView
        android:id="@+id/notnyngfound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nothingFound"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/notnyngfound1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"         />
    <TextView
        android:id="@+id/notnyngfound1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nothingFound1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="16dp"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@+id/device_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notnyngfound"         />
    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonrefresh"
        app:layout_constraintTop_toBottomOf="@+id/notnyngfound1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
    />

    <Button
        android:id="@+id/buttonrefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:height="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_discovery"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>